Fix horizontal alignment of header.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -50,7 +50,7 @@ body {
     top: 0;
     left: 0;
     height: 50px;
-    width: 200px;
+    width: 190px;
     color: white;
     z-index: 999;
     text-align: center;
